--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "lodash.range": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-move": "^6.5.0",
     "react-scripts": "4.0.3",
     "uid": "^2.0.0",
     "web-vitals": "^1.1.2"
